adicionado um subtitulo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="https://img.freepik.com/fotos-gratis/variedade-plana-com-deliciosa-comida-brasileira_23-2148739179.jpg?w=2000" alt="" width="1200">
     <ul>
         <li>
-            <p>Receita de paçoca:</p>
+            <h2>Receita de paçoca:</h2>
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQXRyzuBuYPn1eW-6HEJ5xRCJYgJkEU3jKS5yyHEcrgMg&s" alt="foto-de-amendoim">
             <p><a href="pacoca.html">click aqui para ver a receita.</a></p>
         </li>
