--- a/pacoca.html
+++ b/pacoca.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paçoca-de-amendoim</title>
+    <link rel="icon" href="favicons/favicon-16x16.png">
 </head>
 <body>
     <H1>PAÇOCA DE AMENDOIM</H1>
