--- a/pacoca.html
+++ b/pacoca.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <a href="index.html"><img class="logo-do-site" src="https://media.istockphoto.com/vectors/cooking-school-design-logo-recipe-book-food-studio-or-culinary-master-vector-id1287946224" alt=""></a> 
     <H1 class="titulo">PAÇOCA DE AMENDOIM</H1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSSjYVqZeOP9xZ5zapRtQf1iAqbouNq_04C-jkh88WwCLWKqty0bTrtKY4aKrXkApofwho&usqp=CAU" alt="imagem-da-paçoca" class="banner-principal">
     <p>Paçoca de amendoim é uma receita brasileira de um doce preparado com amendoim, farinha de mandioca ou
