--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="icon" href="favicons/favicon-16x16.png">
 </head>
 <body>
-    <a href="index.html"><img class="logo-do-site" src="https://media.istockphoto.com/vectors/cooking-school-design-logo-recipe-book-food-studio-or-culinary-master-vector-id1287946224" alt=""></a> 
-    <H1 class="titulo">PAÇOCA DE AMENDOIM</H1>
+    <header>
+        <a href="index.html"><img class="logo-do-site" src="https://media.istockphoto.com/vectors/cooking-school-design-logo-recipe-book-food-studio-or-culinary-master-vector-id1287946224" alt=""></a> 
+        <H1 class="titulo">PAÇOCA DE AMENDOIM</H1>
+    </header>
     
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSSjYVqZeOP9xZ5zapRtQf1iAqbouNq_04C-jkh88WwCLWKqty0bTrtKY4aKrXkApofwho&usqp=CAU" alt="imagem-da-paçoca" class="banner-principal">
     
