tirado a tag a do logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="top-do-site">
-        <a href="index.html"><img class="logo-do-site" src="https://media.istockphoto.com/vectors/cooking-school-design-logo-recipe-book-food-studio-or-culinary-master-vector-id1287946224" alt=""></a> 
+        <img class="logo-do-site" src="https://media.istockphoto.com/vectors/cooking-school-design-logo-recipe-book-food-studio-or-culinary-master-vector-id1287946224" alt="">
         <H1 class="titulo">PAÇOCA DE AMENDOIM</H1>
     </header>
     
