--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="favicons/favicon-16x16.png">
 </head>
 <body>
-    <header class="top-do-site">
+    <header class="topo-do-site">
         <img class="logo-do-site" src="https://media.istockphoto.com/vectors/cooking-school-design-logo-recipe-book-food-studio-or-culinary-master-vector-id1287946224" alt="">
         <H1 class="titulo">PAÇOCA DE AMENDOIM</H1>
     </header>
