adicionado link para pacoca

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
             <li>
                 <p>1 g sal 1 pitada</p>
             </li>
+            <li>
+                <p>
+                    <a href="pacoca.html">Modo de Preparo</a>
+                </p>
+            </li>
         </ul>
     </section>
 </body>
